Change calcScores: normalize equivalent values to 0 when only for zeroes, use -1 and +1 otherwise; move JSONSon to public package; use unpkg.com to load a package in browser

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "event-target-shim": "^6.0.2",
+    "jsonson": "^1.0.0",
     "sqlite3": "^5.0.2"
   }
 }
